# brainfy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
brainfy/: __init__.py  __main__.py  intepreter.py  parser.py  tokenizer.py  traceback.py
tests/: test_interpreter.py
